--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=AndersenHW12
+db.url=jdbc:postgresql://localhost:5432/myTicketService
+db.user=postgres
+db.password=Paroli123
+update.enabled=true
+spring.jpa.hibernate.ddl-auto=none
+
+conditional.bean.enabled=true
+
+flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+flyway.ignoreMigrationPatterns="repeatable:missing"
+flyway.repair=true
